--- a/components/locations-table.html
+++ b/components/locations-table.html
@@ -26,7 +26,7 @@
 
     <div layout="column" layout-align="center center" ng-controller="languageController">
 
-        <md-table-container>
+        <md-table-container class="margin-bottom-40-px">
 
             <table md-table md-row-select="options.rowSelection" ng-model="selected"
                    md-progress="promise">
@@ -41,7 +41,7 @@
                     <th md-column md-order-by="radius"><span class="color-darkcyan">{{lang.radius | uppercase}} °</span>
                     <th md-column md-order-by="radius"><span class="color-darkcyan">{{lang.radius | uppercase}} m</span>
                     </th>
-                    <th md-column></th>
+                    <th ng-if="isAdmin" md-column></th>
                 </tr>
                 </thead>
 
@@ -66,7 +66,7 @@
                         ng-class="{'md-placeholder': !location.meter_radius.toString()}">{{location.meter_radius ||
                         lang.insertRadius}}
                     </td>
-                    <td md-cell class="no-wrap" ng-click="deleteRow(location)"><img
+                    <td md-cell class="no-wrap" ng-if="isAdmin" ng-click="deleteRow(location)"><img
                             src="img/icons/delete_trash_24.png" alt="Cancella sito" title="Cancella sito"></td>
                 </tr>
                 <tr md-row ng-show="tableEmpty">
@@ -76,8 +76,8 @@
             </table>
         </md-table-container>
 
-        <md-input-container md-no-float class="md-block width-100 margin-top-bottom-25-px">
-            <div layout="row" layout-align="center end" class="margin-bottom-30-px">
+        <md-input-container md-no-float ng-show="isAdmin" class="md-block width-100 margin-bottom-50-px margin-top-0">
+            <div layout="row" layout-align="center end">
                 <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
                      ng-click="addNewRow()" alt="{{lang.addSite}}" title="{{lang.addSite}}">
             </div>
