--- a/components/canvas.html
+++ b/components/canvas.html
@@ -1,5 +1,5 @@
 <div ng-controller="languageController">
-    <div layout="column" layout-align="center center" class="height-100-vh">
+    <div layout="column" layout-align="center center">
         <div layout="column" class="top-corner">
             <div layout="column" class="background-transparent-gray">
                 <img ng-show="canvasCtrl.showAlarmsIcon" ng-click="showAlarms()" class="pulse-image margin-bottom-5-px padding-top-bottom-6px"
@@ -225,7 +225,7 @@
 
                             <div layout="row" layout-align="center center" class="width-300-px">
 
-                                <div id="drawing-on-off-container" layout="column" class="padding-10-px width-50"
+                                <div ng-if="isAdmin" id="drawing-on-off-container" layout="column" class="padding-10-px width-50"
                                      layout-align="center center">
                                     <div flex="100" layout layout-align="center center">
                                         <md-subheader class="padding-0" ng-show="canvasCtrl.switch.showDrawing">
@@ -261,8 +261,8 @@
                     </md-content>
                 </md-sidenav>
             </section>
-            <div ng-if="ctrlDataService.playAlarm && ctrlDataService.switch.playAudio" layout="column" layout-align="center center" class="bottom-left fadeIn">
-                <md-button ng-click="muteAlarms()" class="md-raised background-red color-white"><div><span class="margin-right-10-px text-bold">{{lang.muteAlarm}}</span><img class="vertical-align-middle" src="img/icons/mute_alarms.png" alt=""></div></md-button>
+            <div ng-show="ctrlDataService.playAlarm" layout="column" layout-align="center center" class="bottom-left fadeIn">
+                <md-button ng-click="muteAlarms()" ng-class="alertButtonColor" class="md-raised background-red color-white"><div><span class="margin-right-10-px text-bold">{{lang.muteAlarm}}</span><img class="vertical-align-middle" src="img/icons/mute_alarms.png" alt=""></div></md-button>
             </div>
         </div>
         <!--end menu container-->
