--- a/components/tags-table.html
+++ b/components/tags-table.html
@@ -41,6 +41,7 @@
                     <th ng-if="isAdmin" md-column></th>
                     <th ng-if="isAdmin" md-column></th>
                     <th ng-if="isAdmin" md-column></th>
+                    <th ng-if="isAdmin" md-column></th>
                 </tr>
                 </thead>
 
@@ -54,7 +55,7 @@
                         {{tag.name || lang.insertName}}
                     </td>
                     <td md-cell ng-class="{'md-placeholder': !tag.type_name}">
-                        <md-select ng-model="selectedType" ng-change="updateTagType(tag, selectedType)" aria-label="Seleziona tipologia">
+                        <md-select ng-model="selectedType" ng-disabled="!isAdmin" ng-change="updateTagType(tag, selectedType)" aria-label="Seleziona tipologia">
                             <md-option><em>{{lang.nothing}}</em></md-option>
                             <md-option ng-selected="{{tagType.id.toString() === tag.type_id.toString()}}" ng-repeat="tagType in tagTypes track by $index" ng-value="tagType.id">
                                 {{tagType.description}}
@@ -70,6 +71,11 @@
                     <td md-cell ng-show="(isAdmin)">
                         <md-button ng-click="tagZones(tag)" class="md-raised background-darkcyan color-white">
                             {{lang.zonesManaging | uppercase}}
+                        </md-button>
+                    </td>
+                    <td md-cell ng-show="(isAdmin)">
+                        <md-button ng-click="tagParameters(tag)" class="md-raised background-darkcyan color-white">
+                            {{lang.parameters | uppercase}}
                         </md-button>
                     </td>
                     <td md-cell ng-show="isAdmin" ng-click="deleteRow(tag)"><img src="img/icons/delete_trash_24.png"
