--- a/components/outdoor-location.html
+++ b/components/outdoor-location.html
@@ -99,7 +99,7 @@
                                 </md-input-container>
                             </div>
 
-                            <div layout="row" layout-align="center center" class="width-300-px">
+                            <div ng-if="isAdmin" layout="row" layout-align="center center" class="width-300-px">
 
                                 <div id="draw-rect-on-off-container" layout="column" class="padding-10-px width-50"
                                      layout-align="center center">
