--- a/components/insert-zones-row.html
+++ b/components/insert-zones-row.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-controller="languageController">
     <!--popup header-->
     <md-toolbar id="popup-toolbar" ng-class="insertZone.resultClass">
         <div layout="row" layout-align="end center" class="width-100">
@@ -13,7 +13,7 @@
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">INSERIMENTO ZONE</h1>
+                <h1 class=" font-iceberg font-x-large">{{lang.insertZone | uppercase}}</h1>
             </div>
         </div>
     </md-toolbar>
@@ -22,12 +22,12 @@
 
 <!--popup content-->
 <md-content class="popup-padding">
-    <div layout="column" layout-align="center center">
+    <div layout="column" layout-align="center center" ng-controller="languageController">
 
         <form id="insertZoneForm" name="insertZoneForm">
             <md-input-container md-no-float class="md-block padding-right-10-px margin-bottom-0">
                 <input required type="text" ng-model="insertZone.zoneName" name="insertZoneName"
-                       placeholder="Nome">
+                       placeholder="{{lang.insertZoneName}}">
                 <div ng-messages="insertZoneForm.insertZoneName.$error || insertZoneForm.$submitted"
                      role="alert">
                     <div ng-message=" required">Inserire un nome</div>
@@ -36,7 +36,7 @@
 
             <md-input-container md-no-float class="md-block padding-right-10-px margin-bottom-0">
                 <input required type="number" ng-model="insertZone.x_left" name="insertZoneXLeft"
-                       placeholder="X sinistra">
+                       placeholder="{{lang.insertZoneXLeft}}">
                 <div ng-messages="insertZoneForm.insertZoneXLeft.$error || insertZoneForm.$submitted"
                      role="alert">
                     <div ng-message=" required">Inserire valore</div>
@@ -44,7 +44,7 @@
             </md-input-container>
             <md-input-container md-no-float class="md-block padding-left-10-px margin-bottom-0">
                 <input required type="number" ng-model="insertZone.x_right" name="insertZoneXRight"
-                       placeholder="X destra">
+                       placeholder="{{lang.insertZoneXRight}}">
                 <div ng-messages="insertZoneForm.insertZoneXRight.$error || insertZoneForm.$submitted"
                      role="alert">
                     <div ng-message=" required">Inserire valore</div>
@@ -52,7 +52,7 @@
             </md-input-container>
             <md-input-container md-no-float class="md-block padding-left-10-px margin-bottom-0">
                 <input required type="number" ng-model="insertZone.y_up" name="insertZoneYUp"
-                       placeholder="Y su">
+                       placeholder="{{lang.insertZoneYUp}}">
                 <div ng-messages="insertZoneForm.insertZoneYUp.$error || insertZoneForm.$submitted"
                      role="alert">
                     <div ng-message=" required">Inserire valore</div>
@@ -60,7 +60,7 @@
             </md-input-container>
             <md-input-container md-no-float class="md-block padding-left-10-px margin-bottom-0">
                 <input required type="number" ng-model="insertZone.y_down" name="insertZoneYDown"
-                       placeholder="Y down">
+                       placeholder="{{lang.insertZoneYDown}}">
                 <div ng-messages="insertZoneForm.insertZoneYDown.$error || insertZoneForm.$submitted"
                      role="alert">
                     <div ng-message=" required">Inserire valore</div>
@@ -68,7 +68,7 @@
             </md-input-container>
 
             <md-input-container md-no-float class="md-block padding-left-10-px margin-bottom-0">
-                <p class="margin-top-0 text-center color-lightgray">Seleziona colore</p>
+                <p class="margin-top-0 text-center color-lightgray">{{lang.insertZoneColor}}</p>
                 <input type="color" value="#ff0000" ng-model="insertZone.color"
                        colorpick-eyedropper-active="true" class="height-40px">
             </md-input-container>
@@ -85,7 +85,7 @@
 
             <div layout="row" layout-align="center end" class="margin-top-15-px">
                 <md-button ng-click="insertZone(insertZoneForm)" class="md-raised  background-darkcyan color-white">
-                    INSERISCI ZONA
+                    {{lang.insertZone | uppercase}}
                 </md-button>
             </div>
         </form>
