--- a/components/users-table.html
+++ b/components/users-table.html
@@ -56,6 +56,7 @@
                                 <md-option ng-selected="{{user.role === '1'}}" ng-value=1>{{lang.adminUser | uppercase}}</md-option>
                                 <md-option ng-selected="{{user.role === '2'}}" ng-value=2>{{lang.intermediateUser | uppercase}}</md-option>
                                 <md-option ng-selected="{{user.role === '0'}}" ng-value=0>{{lang.genericUser | uppercase}}</md-option>
+                                <md-option ng-selected="{{user.role === '3'}}" ng-value=3>{{lang.trackerUser | uppercase}}</md-option>
                             </md-select>
                         </md-input-container></td>
                     <td md-cell>
