--- a/components/outdoor-location.html
+++ b/components/outdoor-location.html
@@ -158,6 +158,9 @@
             <div ng-show="ctrlDataService.playAlarm" layout="column" layout-align="center center" class="bottom-left fadeIn">
                 <md-button ng-click="muteAlarms()" ng-class="alertButtonColor" class="md-raised background-red color-white"><div><span class="margin-right-10-px text-bold">{{lang.muteAlarm}}</span><img class="vertical-align-middle" src="img/icons/mute_alarms.png" alt=""></div></md-button>
             </div>
+            <div layout="column" layout-align="center center" class="bottom-right">
+                <md-button ng-click="centerMap()" class="md-raised background-darkcyan color-white"><div><span class="margin-right-10-px text-bold">{{lang.centerMap}}</span><img class="vertical-align-middle" src="img/icons/center_map.png" alt=""></div></md-button>
+            </div>
         </div>
         <!--end menu container-->
     </div>
