--- a/components/insert-super-user.html
+++ b/components/insert-super-user.html
@@ -88,7 +88,7 @@
 
                 <md-input-container>
                     <label>Ruolo</label>
-                    <md-select ng-model="userRole">
+                    <md-select ng-model="userRoleRegister.registerRole">
                         <md-option ng-repeat="role in roles" ng-value="role.userValue">
                             {{role.userName}}
                         </md-option>
