--- a/components/manage-locations.html
+++ b/components/manage-locations.html
@@ -61,7 +61,7 @@
             </div>
         </md-input-container>
 
-        <md-table-pagination class="color-red background-white position-fixed bottom-0" md-limit="query.limit" md-limit-options="query.limitOptions"
+        <md-table-pagination class="color-red background-white position-fixed bottom-0 width-100" md-limit="query.limit" md-limit-options="query.limitOptions"
                              md-page="query.page"
                              md-total="{{locations.length}}" md-on-paginate="">
         </md-table-pagination>
