--- a/components/history-table.html
+++ b/components/history-table.html
@@ -123,7 +123,7 @@
                     </tbody>
                 </table>
             </md-table-container>
-            <md-table-pagination class="color-red background-white position-fixed bottom-0" md-limit="query.limit" md-limit-options="query.limitOptions"
+            <md-table-pagination class="color-red background-white position-fixed bottom-0 width-100" md-limit="query.limit" md-limit-options="query.limitOptions"
                                  md-page="query.page"
                                  md-total="{{historyRows.length}}" md-on-paginate="">
             </md-table-pagination>
