--- a/components/indoor-alarms-info.html
+++ b/components/indoor-alarms-info.html
@@ -67,7 +67,7 @@
             </table>
         </md-table-container>
 
-        <md-table-pagination class="color-red background-white position-fixed bottom-0" md-limit="query.limit" md-limit-options="query.limitOptions"
+        <md-table-pagination class="color-red background-white position-fixed bottom-0 width-100" md-limit="query.limit" md-limit-options="query.limitOptions"
                              md-page="query.page"
                              md-total="{{alarms.length}}" md-on-paginate="">
         </md-table-pagination>
