--- a/components/tags-table.html
+++ b/components/tags-table.html
@@ -95,7 +95,7 @@
             </div>
         </md-input-container>
 
-        <md-table-pagination class="color-red background-white position-fixed bottom-0" md-limit="query.limit" md-limit-options="query.limitOptions"
+        <md-table-pagination class="color-red background-white position-fixed bottom-0 width-100" md-limit="query.limit" md-limit-options="query.limitOptions"
                              md-page="query.page"
                              md-total="{{tags.length}}" md-on-paginate="">
         </md-table-pagination>
