--- a/components/zone-table.html
+++ b/components/zone-table.html
@@ -104,7 +104,7 @@
             </div>
         </md-input-container>
 
-        <md-table-pagination class="color-red background-white position-fixed width-100 bottom-0" md-limit="query.limit" md-limit-options="query.limitOptions"
+        <md-table-pagination class="color-red background-white position-fixed width-100 bottom-0 width-100" md-limit="query.limit" md-limit-options="query.limitOptions"
                              md-page="query.page"
                              md-total="{{zonesTable.length}}" md-on-paginate="">
         </md-table-pagination>
